src/main/java/io/github/morichan/fescue/parser/ClassFeatureParser.java
// Generated from ClassFeature.g4 by ANTLR 4.7.1
package io.github.morichan.fescue.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ClassFeatureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, READONLY=17, 
		UNION=18, SUBSETS=19, REDEFINES=20, ORDERED=21, UNIQUE=22, QUERY=23, IN=24, 
		OUT=25, INOUT=26, RETURN=27, PUBLIC=28, PRIBATE=29, PROTECTED=30, PACKAGE=31, 
		UNLIMITATION=32, RANGE=33, NEW=34, BOOLEAN=35, CHAR=36, BYTE=37, SHORT=38, 
		INT=39, LONG=40, FLOAT=41, DOUBLE=42, VOID=43, LPAREN=44, RPAREN=45, LBRACE=46, 
		RBRACE=47, LBRACK=48, RBRACK=49, SQUOT=50, DQUOT=51, COMMA=52, DOT=53, 
		ASSIGN=54, COLON=55, SLASH=56, DECIMAL_LITERAL=57, HEX_LITERAL=58, OCT_LITERAL=59, 
		BINARY_LITERAL=60, INTEGER_LITERAL=61, FLOAT_LITERAL=62, HEX_FLOAT_LITERAL=63, 
		BOOL_LITERAL=64, TRUL_LITERAL=65, FALSE_LITERAL=66, NULL_LITERAL=67, NULL=68, 
		NUL=69, NIL=70, NONE=71, UNDEF=72, WS=73, SQUOT_LITERAL=74, DQUOT_LITERAL=75, 
		IDENTIFIER=76;
	public static final int
		RULE_property = 0, RULE_operation = 1, RULE_visibility = 2, RULE_divided = 3, 
		RULE_name = 4, RULE_propType = 5, RULE_type = 6, RULE_multiplicityRange = 7, 
		RULE_lower = 8, RULE_upper = 9, RULE_valueSpecification = 10, RULE_defaultValue = 11, 
		RULE_propModifiers = 12, RULE_properties = 13, RULE_propModifier = 14, 
		RULE_propertyName = 15, RULE_parameterList = 16, RULE_parameter = 17, 
		RULE_direction = 18, RULE_parameterName = 19, RULE_typeExpression = 20, 
		RULE_paramProperties = 21, RULE_returnType = 22, RULE_operProperties = 23, 
		RULE_operProperty = 24, RULE_operName = 25, RULE_expression = 26, RULE_creator = 27, 
		RULE_createdName = 28, RULE_classCreatorRest = 29, RULE_explicitGenericInvocationSuffix = 30, 
		RULE_arguments = 31, RULE_expressionList = 32, RULE_primitiveType = 33, 
		RULE_literal = 34, RULE_integerLiteral = 35, RULE_floatLiteral = 36;
	public static final String[] ruleNames = {
		"property", "operation", "visibility", "divided", "name", "propType", 
		"type", "multiplicityRange", "lower", "upper", "valueSpecification", "defaultValue", 
		"propModifiers", "properties", "propModifier", "propertyName", "parameterList", 
		"parameter", "direction", "parameterName", "typeExpression", "paramProperties", 
		"returnType", "operProperties", "operProperty", "operName", "expression", 
		"creator", "createdName", "classCreatorRest", "explicitGenericInvocationSuffix", 
		"arguments", "expressionList", "primitiveType", "literal", "integerLiteral", 
		"floatLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'!'", "'not'", "'NOT'", "'%'", "'<='", "'>='", "'>'", "'<'", "'=='", 
		"'!='", "'&&'", "'and'", "'AND'", "'||'", "'or'", "'OR'", "'readOnly'", 
		"'union'", "'subsets'", "'redefines'", "'ordered'", "'unique'", "'query'", 
		"'in'", "'out'", "'inout'", "'return'", "'+'", "'-'", "'#'", "'~'", "'*'", 
		"'..'", "'new'", null, null, null, null, null, null, null, null, "'void'", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'''", "'\"'", "','", "'.'", 
		"'='", "':'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "READONLY", "UNION", "SUBSETS", "REDEFINES", 
		"ORDERED", "UNIQUE", "QUERY", "IN", "OUT", "INOUT", "RETURN", "PUBLIC", 
		"PRIBATE", "PROTECTED", "PACKAGE", "UNLIMITATION", "RANGE", "NEW", "BOOLEAN", 
		"CHAR", "BYTE", "SHORT", "INT", "LONG", "FLOAT", "DOUBLE", "VOID", "LPAREN", 
		"RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SQUOT", "DQUOT", "COMMA", 
		"DOT", "ASSIGN", "COLON", "SLASH", "DECIMAL_LITERAL", "HEX_LITERAL", "OCT_LITERAL", 
		"BINARY_LITERAL", "INTEGER_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL", 
		"BOOL_LITERAL", "TRUL_LITERAL", "FALSE_LITERAL", "NULL_LITERAL", "NULL", 
		"NUL", "NIL", "NONE", "UNDEF", "WS", "SQUOT_LITERAL", "DQUOT_LITERAL", 
		"IDENTIFIER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ClassFeature.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ClassFeatureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PropertyContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public DividedContext divided() {
			return getRuleContext(DividedContext.class,0);
		}
		public PropTypeContext propType() {
			return getRuleContext(PropTypeContext.class,0);
		}
		public MultiplicityRangeContext multiplicityRange() {
			return getRuleContext(MultiplicityRangeContext.class,0);
		}
		public DefaultValueContext defaultValue() {
			return getRuleContext(DefaultValueContext.class,0);
		}
		public PropModifiersContext propModifiers() {
			return getRuleContext(PropModifiersContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitProperty(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_property);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIBATE) | (1L << PROTECTED) | (1L << PACKAGE))) != 0)) {
				{
				setState(74);
				visibility();
				}
			}

			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SLASH) {
				{
				setState(77);
				divided();
				}
			}

			setState(80);
			name();
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(81);
				propType();
				}
			}

			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(84);
				multiplicityRange();
				}
			}

			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(87);
				defaultValue();
				}
			}

			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(90);
				propModifiers();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public VisibilityContext visibility() {
			return getRuleContext(VisibilityContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public OperPropertiesContext operProperties() {
			return getRuleContext(OperPropertiesContext.class,0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitOperation(this);
		}
	}

	public final OperationContext operation() throws RecognitionException {
		OperationContext _localctx = new OperationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIBATE) | (1L << PROTECTED) | (1L << PACKAGE))) != 0)) {
				{
				setState(93);
				visibility();
				}
			}

			setState(96);
			name();
			setState(97);
			parameterList();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(98);
				returnType();
				}
			}

			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(101);
				operProperties();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VisibilityContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(ClassFeatureParser.PUBLIC, 0); }
		public TerminalNode PRIBATE() { return getToken(ClassFeatureParser.PRIBATE, 0); }
		public TerminalNode PROTECTED() { return getToken(ClassFeatureParser.PROTECTED, 0); }
		public TerminalNode PACKAGE() { return getToken(ClassFeatureParser.PACKAGE, 0); }
		public VisibilityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visibility; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterVisibility(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitVisibility(this);
		}
	}

	public final VisibilityContext visibility() throws RecognitionException {
		VisibilityContext _localctx = new VisibilityContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_visibility);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIBATE) | (1L << PROTECTED) | (1L << PACKAGE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DividedContext extends ParserRuleContext {
		public TerminalNode SLASH() { return getToken(ClassFeatureParser.SLASH, 0); }
		public DividedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_divided; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterDivided(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitDivided(this);
		}
	}

	public final DividedContext divided() throws RecognitionException {
		DividedContext _localctx = new DividedContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_divided);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(SLASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ClassFeatureParser.IDENTIFIER, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropTypeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public PropTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterPropType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitPropType(this);
		}
	}

	public final PropTypeContext propType() throws RecognitionException {
		PropTypeContext _localctx = new PropTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_propType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(ClassFeatureParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(ClassFeatureParser.IDENTIFIER, 0); }
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(COLON);
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				{
				setState(113);
				match(IDENTIFIER);
				}
				break;
			case BOOLEAN:
			case CHAR:
			case BYTE:
			case SHORT:
			case INT:
			case LONG:
			case FLOAT:
			case DOUBLE:
				{
				setState(114);
				primitiveType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplicityRangeContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(ClassFeatureParser.LBRACK, 0); }
		public UpperContext upper() {
			return getRuleContext(UpperContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(ClassFeatureParser.RBRACK, 0); }
		public LowerContext lower() {
			return getRuleContext(LowerContext.class,0);
		}
		public TerminalNode RANGE() { return getToken(ClassFeatureParser.RANGE, 0); }
		public MultiplicityRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicityRange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterMultiplicityRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitMultiplicityRange(this);
		}
	}

	public final MultiplicityRangeContext multiplicityRange() throws RecognitionException {
		MultiplicityRangeContext _localctx = new MultiplicityRangeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_multiplicityRange);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(LBRACK);
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(118);
				lower();
				setState(119);
				match(RANGE);
				}
				break;
			}
			setState(123);
			upper();
			setState(124);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LowerContext extends ParserRuleContext {
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public ValueSpecificationContext valueSpecification() {
			return getRuleContext(ValueSpecificationContext.class,0);
		}
		public LowerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lower; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterLower(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitLower(this);
		}
	}

	public final LowerContext lower() throws RecognitionException {
		LowerContext _localctx = new LowerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lower);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECIMAL_LITERAL:
			case HEX_LITERAL:
			case OCT_LITERAL:
			case BINARY_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				integerLiteral();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				valueSpecification();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpperContext extends ParserRuleContext {
		public TerminalNode UNLIMITATION() { return getToken(ClassFeatureParser.UNLIMITATION, 0); }
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public ValueSpecificationContext valueSpecification() {
			return getRuleContext(ValueSpecificationContext.class,0);
		}
		public UpperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_upper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterUpper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitUpper(this);
		}
	}

	public final UpperContext upper() throws RecognitionException {
		UpperContext _localctx = new UpperContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_upper);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNLIMITATION:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(UNLIMITATION);
				}
				break;
			case DECIMAL_LITERAL:
			case HEX_LITERAL:
			case OCT_LITERAL:
			case BINARY_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				integerLiteral();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				valueSpecification();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueSpecificationContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(ClassFeatureParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ClassFeatureParser.RPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ClassFeatureParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ClassFeatureParser.COMMA, i);
		}
		public ValueSpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueSpecification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).enterValueSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ClassFeatureListener ) ((ClassFeatureListener)listener).exitValueSpecification(this);
		}
	}

	public final ValueSpecificationContext valueSpecification() throws RecognitionException {
		ValueSpecificationContext _localctx = new ValueSpecificationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_valueSpecification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(LPAREN);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
